deployment/spiffe/oidc/oidc-service.yaml
# Service definition for the admission webhook
apiVersion: v1
kind: Service
metadata:
  name: spire-oidc
  namespace: spire
spec:
  type: NodePort
  selector:
    app: spire-oidc-provider
  ports:
    - name: http
      port: 443
      targetPort: 443
      nodePort: 30000
