deployment/spiffe/oidc/oidc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-ingress
  namespace: oidc
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spire-oidc
            port:
              number: 443
